# metricon-labs

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  biome.json  contributing.md  metricon-architecture.html  netlify.toml  next.config.js  package.json  security.md  tsconfig.json
.github/workflows/: ci.yml
docs/: architecture.md  privacy-model.md  roadmap.md  vault-flow.md  whitepaper.md
programs/metricon_vault/src/: Cargo.toml  lib.rs
relayer/: index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/bridge/: page.tsx
src/app/bridge/docs/: page.tsx
src/app/bridge/portfolio/: page.tsx
src/app/bridge/reveal/: page.tsx
src/app/bridge/stealth/: page.tsx
src/app/bridge/swap/: page.tsx
src/components/animations/: ScrollReveal.tsx
src/components/tabs/: BridgeTab.tsx  PortfolioTab.tsx  RevealTab.tsx  StealthTab.tsx  SwapTab.tsx
src/components/ui/: ClientProviders.tsx  Footer.tsx  Header.tsx  Navbar.tsx  PasswordGate.tsx  ProductSection.tsx  SiteFooter.tsx  Toaster.tsx  TokenSelector.tsx  WalletButton.tsx
src/contexts/: WalletContextProvider.tsx
src/hooks/: useBridge.ts  useSwap.ts  useVault.ts  useWalletConnection.ts
src/idl/: metricon_vault.json
src/lib/anchor/: metricon-program.ts  use-anchor-provider.tsx
src/lib/supabase/: api.ts  client.ts  types.ts
supabase/: schema.sql
